--- a/packages/couchdb/_dev/deploy/docker/docker-compose.yml
+++ b/packages/couchdb/_dev/deploy/docker/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2.3'
 services:
   couchdb:
-    image: couchdb:${COUCHDB_VERSION:-3.2.2}
+    image: couchdb:3.3.2
     environment:
       - COUCHDB_USER=admin
       - COUCHDB_PASSWORD=password
